--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=PokeScam
+spring.config.import=optional:file:.env[.properties]
 server.port=3333
-spring.datasource.url=jdbc:postgresql://db.qwgoicvpyvtybymprxsm.supabase.co:5432/postgres?user=postgres&password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
