--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+secretKey=${SECRET_KEY}
