heal pokemon with currency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=PokeScam
-spring.config.import=optional:file:.env[.properties]
+
+spring.config.import=optional:file:.env.properties,optional:classpath:data-settings.properties
+
 server.port=3333
 
 spring.datasource.url=${DB_URL}
