--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-logging.level.org.springframework.security=DEBUG
+# logging.level.org.springframework.security=DEBUG
 
 
 secretKey=${SECRET_KEY}
