--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,13 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.devtools.restart.enabled=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.initialization-fail-timeout=0
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
 # logging.level.org.springframework.security=DEBUG
 
 
