admin can send unban email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ spring.config.import=optional:file:.env.properties,optional:classpath:data-setti
 
 server.port=3333
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# spring.datasource.url=${DB_URL}
+# spring.datasource.username=${DB_USERNAME}
+# spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://aws-1-eu-north-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.qwgoicvpyvtybymprxsm
+spring.datasource.password=QiU3iHvitXJkh3HR
 # automatic timeout for connections
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=60000
@@ -18,12 +21,15 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+# spring.mail.username=${MAIL_USERNAME}
+# spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=monteasel777@gmail.com
+spring.mail.password=zbmpuxybschbfjoy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # logging.level.org.springframework.security=DEBUG
 
 
-secretKey=${SECRET_KEY}
+# secretKey=${SECRET_KEY}
+secretKey=iRqSAZVH6Lv+1hjTyCg/ppkLH8b1iOy4unG9kzF5E8c=
